# Abit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint-test.yml
docs/: design.md  experiment_template.md  plan.md
docs/decisions/: 0001-stack-inicial.md  0002-modelo-base-pythia.md  0004-cierre-linea-drift-geometrico.md
experiments/_template/: README.md  config.yaml  run.py
experiments/exp_001_shannon_baseline/: README.md  config.yaml  run.py
experiments/exp_002_activation_drift_last/: README.md  config.yaml  run.py
experiments/exp_002b_drift_decomposition/: README.md  config.yaml  run.py
experiments/exp_003_drift_by_layer/: README.md  config.yaml  run.py
experiments/exp_004_m1_bayesian_cloze/: README.md  config.yaml  run.py
experiments/exp_004b_bayesian_surprise_reformulated/: README.md  config.yaml  run.py
experiments/exp_005_replication_llama_3_2_1b/: README.md  config.yaml
src/iat/: datasets.py  io.py  models.py  seeding.py  stats.py
src/iat/metrics/: __init__.py  activation.py  base.py  bayesian.py  bayesian_v2.py  shannon.py
tests/: test_bayesian_v2.py  test_smoke.py
