[project]
name = "iat"
version = "0.1.0"
description = "Information as Transformation: empirical study of information beyond Shannon in LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "tokenizers>=0.20.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "statsmodels>=0.14.0",
    "pingouin>=0.5.4",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "mlflow>=2.16.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.112.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iat"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "experiments", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "ANN", "PTH"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"experiments/*/run.py" = ["ANN201"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["build/", "dist/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
